# python-course

./: .gitignore  anotations.py  class.py  csv.py  csv_working.py  decorator.py  doc_str.py  errors.py  event_loop.py  exceps.py  file.txt  function_demo.py  imports.py  inheritance.py  lluvia_perceptron.py  products.json  products_updated.csv  properties_getters_setters.py  randomm.py  range_and_list.py  recursividad.py  txt.py
1. Fundamentos Avanzados/collections/: count_products.py  count_sales.py
concurrencia-y-paralelismo/: concurrency_understanding_so_threading.py  more_about_parallel_process.md  parallel_understand.py  practice.py
decorators/: circule.py  class_method.py  my_deco_anidate.py  static.py
django_projects/: .gitignore  django-manual.md
django_projects/base_example/: db.sqlite3
django_projects/base_example/base/: models.py  urls.py  views.py
django_projects/base_example/core/: settings.py  urls.py
django_projects/mates/: db.sqlite3
django_projects/mates/mates/: admin.py  apps.py  models.py  urls.py  views.py
django_projects/mates/project/: settings.py  urls.py
django_projects/suffolk/: db.sqlite3  manage.py
django_projects/suffolk/sociedad/: admin.py  apps.py  models.py  urls.py  views.py
django_projects/suffolk/suffolk/: asgi.py  settings.py  urls.py  wsgi.py
example_package/: .gitignore  README.md  pyproject.toml
lluvia_with_tensor/: demo_usage.py  index.py  modelo_paraguas.keras  pyproject.toml
python-avanzado-privateProtectedMethods/: protected_method.py  protected_private_and_public_method.py
(+7 files in other folders)
