[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "example_package_pablodelfante"
version = "0.0.1"
authors = [
  { name="Pablo Delfante", email="pablodelfantexp@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/pablo-learn/python-course/tree/main/example_package"
Issues = "https://github.com/pablo-learn/python-course/issues"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]